# Xenon

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  conanfile.py  conanfile.txt
cmake/: FetchGLFW.cmake  FetchImGui.cmake  FetchStb.cmake  MacroEnsureOutOfSourceBuild.cmake  MacroLibrary.cmake  PrecompiledHeader.cmake  Sanitizers.cmake  Settings.cmake  StaticAnalyzers.cmake  Warnings.cmake
examples/: CMakeLists.txt
examples/CustomMain/: CMakeLists.txt
examples/CustomMain/src/: CustomMain.cpp
examples/Editor/: CMakeLists.txt
examples/Editor/src/: Editor.cpp
examples/Sandbox/: CMakeLists.txt
examples/Sandbox/src/: Sandbox.cpp
include/Xenon/: Config.hpp  Core.hpp  Graphics.hpp  Services.hpp  Utils.hpp  Xenon.hpp
include/Xenon/Config/: ApplicationConfiguration.hpp  ApplicationGuiConfiguration.hpp  ApplicationLoggerConfiguration.hpp  ApplicationWindowConfiguration.hpp
include/Xenon/Core/: Api.hpp  Application.hpp  ApplicationBuilder.hpp  ApplicationServices.hpp  Assert.hpp  DataType.hpp  Initializer.hpp  Log.hpp  Main.hpp  Platform.hpp  Window.hpp
include/Xenon/Core/Events/: KeyEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
include/Xenon/Core/Gui/: Gui.hpp  GuiStyle.hpp
include/Xenon/Core/Input/: Input.hpp  KeyCode.hpp  MouseCode.hpp
include/Xenon/Core/Window/: Window.hpp  WindowEventManager.hpp  WindowResolution.hpp
include/Xenon/Graphics/: BufferLayout.hpp  GraphicsContext.hpp  IndexBuffer.hpp  RenderCmd.hpp  Renderer.hpp  RendererAPI.hpp  Shader.hpp  VertexArray.hpp
include/Xenon/Graphics/API/: BufferLayout.hpp  FrameBuffer.hpp  GraphicsContext.hpp  IndexBuffer.hpp  RendererAPI.hpp  RendererAPIDetails.hpp  Shader.hpp  Texture.hpp  Texture2D.hpp  VertexArray.hpp  VertexBuffer.hpp
include/Xenon/Graphics/Camera/: Camera.hpp  CameraController.hpp  OrthographicCamera.hpp  OrthographicCameraController.hpp
include/Xenon/Services/Event/: Event.hpp  EventBus.hpp  EventSubject.hpp
include/Xenon/Services/Log/: Logger.hpp
include/Xenon/Services/Time/: Timer.hpp
include/Xenon/Utils/: Delegate.hpp  DeltaTime.hpp  ImmutableServiceLocator.hpp  ResourceCache.hpp  ResourceLoader.hpp  ServiceLocator.hpp
src/: CMakeLists.txt
src/Config/: ApplicationGuiConfiguration.cpp  ApplicationLoggerConfiguration.cpp  ApplicationWindowConfiguration.cpp  CMakeLists.txt
src/Core/: Application.cpp  ApplicationBuilder.cpp  CMakeLists.txt  Initializer.cpp  InternalApplicationServices.hpp  Window.cpp
src/Core/Gui/: Gui.cpp
src/Core/Input/: Input.cpp  NullInput.hpp
src/Core/Window/: Window.cpp  WindowEventManager.cpp
src/Graphics/: BufferLayout.cpp  CMakeLists.txt  GraphicsContext.cpp  IndexBuffer.cpp  RenderCmd.cpp  Renderer.cpp  RendererAPI.cpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp
src/Graphics/API/: BufferLayout.cpp  FrameBuffer.cpp  GraphicsContext.cpp  IndexBuffer.cpp  RendererAPI.cpp  Shader.cpp  Texture2D.cpp  VertexArray.cpp  VertexBuffer.cpp
src/Graphics/Camera/: Camera.cpp  CameraController.cpp  OrthographicCamera.cpp  OrthographicCameraController.cpp
src/Platform/: CMakeLists.txt
src/Platform/Common/: CommonInput.cpp  CommonInput.hpp  CommonWindow.cpp  CommonWindow.hpp  CommonWindowEventManager.cpp  CommonWindowEventManager.hpp
src/Platform/GLFW/: GLFWInput.cpp  GLFWInput.hpp  GLFWWindow.cpp  GLFWWindow.hpp  GLFWWindowEventManager.cpp  GLFWWindowEventManager.hpp
src/Platform/OpenGL/: OpenGLContext.cpp  OpenGLContext.hpp  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.hpp  OpenGLGui.cpp  OpenGLGui.hpp  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.hpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLTexture2D.cpp  OpenGLTexture2D.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.hpp  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.hpp
src/Services/: CMakeLists.txt
src/Services/Log/: ConsoleLogSink.cpp  ConsoleLogSink.hpp  FileLogSink.cpp  FileLogSink.hpp  InternalLogger.hpp  LogSink.hpp  Logger.cpp
src/Utils/: CMakeLists.txt  DeltaTime.cpp
tests/: CMakeLists.txt
tests/src/: Dummy.cpp  TestMain.cpp
tests/src/Utils/: Delegate.cpp  ImmutableServiceLocator.cpp  ServiceLocator.cpp  TestService.hpp
